<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gscript</string>
    
    <!-- common -->
    
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <string name="execute">Execute</string>
	<string name="save">Save</string>
    <string name="file_execution_requested">File execution requested</string>
    <string name="path">Path</string>
    <string name="path_hint">Path e.g. /sdcard/gscript/</string>
	<string name="executing_script">Executing script</string>
	<string name="executing_process">Executing process</string>
	<string name="input_notification_title">Pending input request</string>
	<string name="input_notification_text">A process is waiting for input</string>
	<string name="send_email">Send e-mail</string>
    
	<!-- activities/views -->
	
    <string name="library_name">Library name</string>
    <string name="library_new">Add new library</string>
    <string name="library_properties">Library properties</string>
    <string name="library_item_attributes">Attributes</string>
    <string name="library_item_conditions">Conditions</string>
    <string name="item_attributes_shell_profile">Use shell profile</string>
    <string name="item_attributes_unattended">Start unattended</string>
	<string name="item_attributes_exit">Do not append exit</string>
    <string name="item_conditions_boot">Run on boot</string>
    <string name="item_conditions_schedule">Schedule</string>
    
    <string name="schedule_name">Schedule name</string>
    <string name="schedule_add">Add schedule</string>
    
    <!-- actionbar -->

    <string name="menu_main_settings">Settings</string>
    <string name="menu_main_schedules">Manage schedules</string>
    <string name="menu_libraries_add">Add library</string>
    <string name="menu_libraries_context_remove">Remove library</string>
    <string name="menu_libraries_context_edit">Edit library</string>
    <string name="menu_libraries_context_title">%d item(s)</string>
    <string name="menu_history_clear">Clear history</string>
    <string name="menu_history_context_remove">Remove from history</string>
    <string name="menu_history_context_title">%d item(s)</string>

    <string name="menu_schedule_context_title">%d item(s)</string>
    
    
    <string name="menu_process_start">Start new process</string>
    <string name="menu_process_kill_active">Kill active processes</string>
	<string name="menu_process_context_kill">Kill process(es)</string>    
	<string name="menu_process_context_title">%d item(s)</string>
	<string name="menu_browse_refresh">Refresh folder</string>
    <string name="menu_browse_context_edit">Edit item</string>
	<string name="menu_browse_context_shortcut">Create shortcut</string>
    <string name="menu_browse_context_title">%d item(s)</string>
    <string name="menu_emulator_kill">Kill process</string>
    <string name="menu_emulator_autoscroll">Auto-scroll</string>
    <string name="menu_emulator_softinput">Toggle soft-input</string>
    <string name="menu_emulator_additional_softinput">Toggle additional soft-input</string>
    <string name="menu_emulator_scroll_mode">Toggle scroll-mode</string>
    <string name="menu_emulator_cursor_mode">Toggle cursor-mode</string>
    
    <!-- tabs -->
    
    <string name="tab_library">Library</string>
    <string name="tab_process">Process</string>
    <string name="tab_history">History</string>
    <string name="tab_schedules">Schedules</string>

    <!-- schedules -->
    
    
    <!-- settings -->
   
    <string name="settings">Settings</string>
    
    <string name="settings_color_scheme">Terminal color scheme</string>
    
    <string name="settings_shell_profiles">Shell profiles</string>
    <string name="settings_shell_profiles_summary">Manage shell profiles for executing scripts</string>
    <string name="settings_shell_profiles_create">Create new profile</string>
    <string name="settings_shell_profiles_default">Default profile</string>
    <string name="settings_shell_profiles_default_summary">Select the default shell profile</string>
    
    <string name="settings_shell_profile_name">Profile name</string>
    <string name="settings_shell_profile_name_summary">Name for this profile</string>
    <string name="settings_shell_profile_cmd_exec">Command ( execute )</string>
    <string name="settings_shell_profile_cmd_exec_summary">Command used to execute a script</string>
    <string name="settings_shell_profile_cmd_start">Command ( start )</string>
    <string name="settings_shell_profile_cmd_start_summary">Command used to start a new process directly</string>
    <string name="settings_shell_profile_background">Background color</string>
    <string name="settings_shell_profile_background_summary">Color to use for console background</string>
    <string name="settings_shell_profile_textcolor">Text color</string>
    <string name="settings_shell_profile_textcolor_summary">Color to use for console text</string>
    <string name="settings_shell_profile_fontsize">Font size</string>
    <string name="settings_shell_profile_fontsize_summary">Font size to use for console text</string>
    <string name="settings_shell_profile_append_path">Append path</string>
    <string name="settings_shell_profile_append_path_summary">List of path entries (:-separated) to append</string>
    <string name="settings_shell_profile_append_exit">Append exit</string>
    <string name="settings_shell_profile_append_exit_summary">Automatically append exit to end of script</string>
    <string name="settings_shell_profile_delete">Delete this profile</string>
    
    <string name="settings_aliases">Profile aliases</string>
    <string name="settings_aliases_summary">Manage additional launcher shortcuts</string>
    
    <!-- lint -->
    <string name="content_description_icon">icon</string>
    
</resources>