<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
		android:layout_weight="1.0"        
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/TextLarge"
            android:id="@+id/textViewFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_execution_requested" />
        
        <RelativeLayout
		    android:id="@+id/placeholder_item_attributes"
		    android:layout_marginTop="10dip"
		    android:padding="10dip"
		    android:background="#ff333333"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    />
        
    </LinearLayout>
    
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:text="@string/cancel"
            style="@style/DialogButton" />

        <View style="@style/DividerVertical"/>
        
        <Button
            android:id="@+id/buttonExecute"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/execute"
            style="@style/DialogButton" />
        
    </LinearLayout>

</LinearLayout>